# teamclaws

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
docs/: DEPLOYMENT.md
multiclaws/: __init__.py  __main__.py  cli.py  config.py  config.yaml  main.py
multiclaws/automation/: n8n_client.py
multiclaws/comm/: adapter.py  cli_adapter.py  telegram_adapter.py
multiclaws/core/: picoclaw.py  signals.py  watchdog.py
multiclaws/llm/: provider.py  router.py
multiclaws/memory/: chunker.py  context_builder.py  daily_log.py  durable_memory.py  retriever.py  schema.sql  store.py  summarizer.py  task_context.py
multiclaws/roles/: ceo.py  cfo.py  coder.py  communicator.py  coo.py  cso.py  permissions.py  researcher.py
multiclaws/tools/: registry.py  sandbox.py
multiclaws/utils/: logger.py  output.py
presets/architecture/: api-designer.yaml  database-planner.yaml  feature-spec-writer.yaml  system-designer.yaml  tech-stack-advisor.yaml
presets/business/: business-model-analyzer.yaml  financial-planner.yaml  market-researcher.yaml  pricing-strategist.yaml  privacy-policy-writer.yaml  terms-writer.yaml
presets/code_quality/: code-reviewer.yaml  documentation-writer.yaml  performance-optimizer.yaml  refactoring-expert.yaml  security-auditor.yaml  test-strategist.yaml
presets/communication/: api-documenter.yaml  changelog-writer.yaml  presentation-builder.yaml  support-responder.yaml  team-communicator.yaml  technical-writer.yaml
tests/: test_agent.py  test_memory.py  test_sandbox.py  test_tools.py
(+42 files in other folders)
